<?xml version="1.0" encoding="utf-8"?>

<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:title="@string/settings_title">

    <ListPreference
        android:defaultValue="@string/settings_order_by_default"
        android:entries="@array/settings_order_by_labels"
        android:entryValues="@array/settings_order_by_values"
        android:key="@string/settings_order_by_key"
        android:title="@string/settings_order_by_label" />

    <EditTextPreference
        android:defaultValue="@string/settings_min_secao_default"
        android:inputType="text"
        android:key="@string/settings_min_secao_key"
        android:hint="@string/settings_hint_secao"
        android:selectAllOnFocus="true"
        android:title="@string/settings_min_secao_label" />

    <EditTextPreference
        android:defaultValue="@string/settings_min_qtde_default"
        android:inputType="numberDecimal"
        android:key="@string/settings_min_qtde_key"
        android:selectAllOnFocus="true"
        android:hint="@string/settings_qtde_secao"
        android:title="@string/settings_min_qtde_label" />

</PreferenceScreen>
